<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ContactDetailsActivity">

    <LinearLayout
        android:id="@+id/linearlayout_TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp" >

        <TextView
            android:id="@+id/textviewContactButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="left"
            android:text="@string/contactdetails_buttoncontact"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#b4fbf9"/>

        <TextView
            android:id="@+id/textviewEditButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/contactdetails_buttonedit"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#b4fbf9"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout_TopBar"
        android:paddingTop="5dp"
        android:background="@drawable/gradient_header">

        <RelativeLayout
            android:id="@+id/imgProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="16dp"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageview_ProfilePicture"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="5dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textviewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgProfile"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif"
            android:paddingTop="2dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textSize="24sp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewName"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_iconmessage"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_message_circle"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview_iconmessage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/contactdetails_message"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_iconcall"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_call_circle"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview_iconcall"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/contactdetails_call"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_iconemail"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/ic_email_circle"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview_iconemail"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/contactdetails_email"
                    android:textAlignment="center" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageview_iconfavourite"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    app:civ_border_color="#666666"
                    app:civ_border_width="1dp"
                    android:src="@drawable/ic_favourite_circle"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageview_iconfavourite"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/contactdetails_favourite"
                    android:textAlignment="center" />

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_Mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutProfile"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="0.3"
            android:gravity="right"
            android:text="@string/contactdetails_id" />

        <EditText
            android:id="@+id/edittext_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null" />

    </LinearLayout>

</RelativeLayout>